Server Unit Tests
Removed @Mock annotation